# Otel-cpp-test

./: .gitignore  README.md
Crow_exp/: CMakeLists.txt  main.cpp
otel-cpp/lib/cmake/opentelemetry-cpp/: opentelemetry-cpp-config-version.cmake  opentelemetry-cpp-config.cmake  opentelemetry-cpp-target-noconfig.cmake  opentelemetry-cpp-target.cmake
otel-cpp/lib/pkgconfig/: opentelemetry_api.pc  opentelemetry_common.pc  opentelemetry_logs.pc  opentelemetry_metrics.pc  opentelemetry_resources.pc  opentelemetry_trace.pc  opentelemetry_version.pc
